java/k8s/ingress-rabbitmq.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: java-tasks
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /rabbitmq(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
